replays/errorlog-20181107-023602-0500-1541576162-32-32-0.log

Turn 1
================================================================
error: communication error with bot: Problem writing to pipe, errno was: 0 (No error)
Last input received was:

    if and cell.position is not ship.position and cell.position not in current_targets:
         ^
SyntaxError: invalid syntax

